k8s/genealogy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genealogy-service
  labels:
    app: genealogy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genealogy-service
  template:
    metadata:
      labels:
        app: genealogy-service
    spec:
      containers:
      - name: genealogy-service
        image: dzinza/genealogy-service:latest
        ports:
        - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: genealogy-service
spec:
  selector:
    app: genealogy-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8006
